<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <!--App information related strings-->
    <!--app menu-->
    <string name="color_for_this_entry">Colors &amp; Size</string>
    <!--Rename app-->
    <string name="rename">Rename</string>

    <!--Uninstall apps : as same as android settings-->
    <string name="uninstall">Uninstall</string>
    <string name="fonts">Fonts</string>
    <string name="themes">Themes</string>
    <string name="set_to_primary_colors">Set Primary Colors</string>
    <string name="backup">Backup</string>

    <string name="reset_to_default_settings">Reset to default Settings</string>
    <string name="app_info">App Info</string>

    <string name="random_colors">Random Colors</string>


    <string name="customize_with_color_sniffer" translatable="false">ColorSniffer…</string>

    <string name="reset_to_default">Reset All</string>
    <string name="freeze_size">Freeze Size</string>
    <string name="hide">Hide</string>
    <string name="unfreeze_size">Unfreeze size</string>
    <string name="hidden_apps">Hidden Apps</string>

    <string name="frozen_apps">Frozen Apps</string>
    <string name="restore">Restore</string>
    <string name="fixed_colors">Fixed Colors</string>
    <string name="freeze_apps_size">Freeze Apps Size</string>
    <string name="unfreeze_app_size">Unfreeze Apps Size</string>
    <string name="default_theme">Default Theme</string>
    <string name="background_wallpaper">Background Wallpaper</string>
    <!--THIS IS THEME NAME-->
    <string name="white_on_black">White on Black</string>
    <!--THIS IS THEME NAME-->
    <string name="black_on_white">Black on White</string>
    <!--THIS IS THEME NAME-->
    <string name="white_on_grey">White on Grey</string>
    <!--THIS IS THEME NAME-->
    <string name="black_on_grey">Black on Grey</string>
    <!--THIS IS THEME NAME-->
    <string name="hacker_green">Hacker Green</string>
    <!--THIS IS THEME NAME-->
    <string name="hacker_red">Hacker Red</string>
    <string name="choose_old_backup_files">Choose previous backup file</string>
    <string name="color_sniffer" translatable="false">Color Sniffer</string>

    <string name="from_clipboard">From Clipboard</string>

    <string name="from_color_sniffer_app">From ColorSniffer App</string>

    <string name="backup_saved_to_downloads">Backup saved to Downloads</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="choose_old_backup_file">Choose old backup file</string>
    <!--a switch for on -->
    <string name="on">:On</string>
    <!--a switch for off -->
    <string name="off">:Off</string>
    <string name="alignment">Alignment</string>
    <string name="start">Start</string>
    <string name="center">Center</string>
    <string name="end">End</string>
    <string name="padding">Padding</string>
    <!--asking user to remove something-->
    <string name="remove">Remove</string>
    <!--asking user to open app-->
    <string name="open">Open</string>
    <string name="reset_color">Reset Color</string>
    <string name="restore_default_fonts">Restore Default fonts</string>

    <string name="select_fonts">Select fonts</string>
    <string name="sort_apps_by">Sort Apps By</string>
    <!--Sort Apps By: NAME-->
    <string name="by_name">Name</string>
    <!--Sort Apps By: APP USAGE TIME-->
    <string name="by_opening_counts">App Usage</string>
    <!--Sort Apps By: APP COLOR-->
    <string name="by_color">Color</string>
    <!--Sort Apps By: CUSTOM-->
    <string name="custom">Customs</string>
    <!--Sort Apps By: APP SIZE-->
    <string name="by_size">Size</string>
    <!--Sort Apps By: UPDATE TIME-->
    <string name="update_time">Update time</string>
    <!--Sort Apps IN : RECENTLY USED FIRST ORDER -->
    <string name="recently_first">Recently first</string>
    <string name="restart_launcher">Restart Launcher</string>





    <!-- Frozen apps dialog title -->
    <string name="freezed_apps">Freezed Apps</string>
    <!-- Color source from ColorSniffer app -->
    <string name="from_colorsniffer_app">From ColorSniffer App</string>
    <!-- Size setting for individual app entry -->
    <string name="size_for_this_entry">Size for this entry</string>

    <!-- Double tap to lock screen -->
    <string name="double_tap_to_lock">Double Tap Lock</string>
    <string name="double_tap_to_lock_enabled">Double Tap Lock:On</string>
    <string name="double_tap_to_lock_disabled">Double Tap Lock:Off</string>

    <!-- Onboarding Tutorial -->
    <string name="onboarding_title">Welcome to Lunox</string>
    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_previous">Previous</string>
    <string name="onboarding_finish">Finish</string>
    <string name="onboarding_close">Close</string>

    <!-- Tutorial Steps -->
    <string name="tutorial_step_1_title">Welcome to Lunox Launcher</string>
    <string name="tutorial_step_1_content">Lunox is a minimalist text-based launcher that puts simplicity first. All your apps are displayed as text in a clean, distraction-free interface.</string>

    <string name="tutorial_step_2_title">Opening Apps</string>
    <string name="tutorial_step_2_content">Simply tap on any app name to open it. Apps are sorted alphabetically by default, but you can change the sorting in settings.</string>

    <string name="tutorial_step_3_title">Search Functionality</string>
    <string name="tutorial_step_3_content">Swipe down to up anywhere on the screen to open the search bar. Start typing to quickly find and launch any app.</string>

    <string name="tutorial_step_4_title">App Options</string>
    <string name="tutorial_step_4_content">Long press on any app to access options like rename, hide, uninstall, change colors, and more customization features.</string>

    <string name="tutorial_step_5_title">Launcher Settings</string>
    <string name="tutorial_step_5_content">Long press on empty space to access launcher settings. Here you can change themes, fonts, sorting options, and other preferences.</string>

    <string name="tutorial_step_6_title">Customization</string>
    <string name="tutorial_step_6_content">Personalize your launcher with different themes, custom colors for apps, font options, and various sorting methods to make it truly yours.</string>

    <string name="tutorial_step_7_title">You\'re All Set!</string>
    <string name="tutorial_step_7_content">That\'s all you need to know to get started with Lunox. Enjoy your clean, minimalist launcher experience!</string>

    <string name="tutorial_replay">Show Tutorial</string>

    <!-- Accessibility service description -->
    <string name="accessibility_service_description">Lunox Accessibility Service for lock screen functionality. This service allows double tap to lock the screen.</string>
    <string name="set_as_default_launcher">Set as default launcher</string>

    <string name="search_bar_gesture">Enable Search Bar Gesture</string>
</resources>